fixed align

--- a/src/Main/Main.module.css
+++ b/src/Main/Main.module.css
@@ -1,5 +1,6 @@
 .mainBlock {
-    height: 100vh;
+    display: flex;
+    min-height: 100vh;
     background-color: #e1bcc1;
 }
 
